--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HOME PAGE</title>
-  
+  <title>Ajit Kumar Khatua Portfolio</title>
   <link rel="stylesheet" href="https://kit.fontawesome.com/3e90fa2a97.css" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./style.css" />
@@ -72,7 +71,7 @@
       </div>
       <button id="resume-button-2" onclick="resume()"><a id="resume-link-2" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank"  download="Ajit_Khatua_Resume">Resume</a></button>
     </div>
-    <div>
+    <div data-aos="fade-down" data-aos-duration="2000">
       <img src="./src/image/imageedit_1_5029899168.png" class="home-img" alt="#" />
     </div>
   </section>
@@ -225,16 +224,16 @@
     <h1 id="github-heading">GitHub Activity-Calendar</h1>
     <img id="github-contribution" src="./src/image/github stats.png" alt="">
     <br>
-    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Ajit-kumar-khatua"
+    <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=ajit-kumar-khatua&theme=vision-friendly-dark"
       alt="streakstat" />
 
     <img id="github-stats-card"
-      src="https://github-readme-stats.vercel.app/api?username=Ajit-kumar-khatua&show_icons=true&locale=en"
+      src="https://github-readme-stats.vercel.app/api?username=Ajit-kumar-khatua&show_icons=true&locale=en&theme=midnight-purple"
       alt="stat-card"/>
 
       <br>
       <img id="github-top-langs"
-      src="https://github-readme-stats.vercel.app/api/top-langs/?username=Ajit-kumar-khatua&show_icons=true&locale=en&layout=compact"
+      src="https://github-readme-stats.vercel.app/api/top-langs/?username=Ajit-kumar-khatua&show_icons=true&locale=en&layout=compact&theme=midnight-purple"
       alt="top_languages" />
     <!-- <img id="github-stats-card"
       src="https://github-readme-stats.vercel.app/api?username=ajit-kumar-khatua&show_icons=true&locale=en%22%20alt=%22ajit-kumar-khatua"
