--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <button id="resume-button-2" onclick="resume()"><a id="resume-link-2" href="./src/Resume/Ajit_Khatua_Resume.pdf" target="_blank"  download="Ajit_Khatua_Resume">Resume</a></button>
     </div>
-    <div data-aos="fade-down" data-aos-duration="2000">
+    <div>
       <img src="./src/image/imageedit_1_5029899168.png" class="home-img" alt="#" />
     </div>
   </section>
