Project Deployed Link Updated

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <img src="./src/image/Baby's Fashion.png" alt="" >
       <h2 class="project-title">Baby's Fashion</h2>
       <!-- <br> -->
-      <p class="project-description">It is an E-commerce website selling all baby fashion related products in the year range of 0 to 12 years.  It is clone of <a href="https://www.carters.com/" target="_blank">carters.com</a></p>
+      <p class="project-description">It is an E-commerce website selling all baby fashion related products in the age group of 0 to 12 years.  It is clone of <a href="https://www.carters.com/" target="_blank">carters.com</a></p>
        <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB</p>
       <!-- <br>      -->
@@ -182,12 +182,12 @@
       <img src="./src/image/Home Page.png" alt="">
       <h2 class="project-title">Easy Poll</h2>
       <!-- <br> -->
-      <p class="project-description">It is a platform where a user can take responses from other users in real time and it is clone of <a href="https://www.slido.com/" target="_blank">Slido.com</a>. </p>
+      <p class="project-description">It is a platform where a user can take responses from other users in real time by creating a poll and it is clone of <a href="https://www.slido.com/" target="_blank">Slido.com</a>. </p>
       <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB,Web Soket</p>
       <!-- <br> -->
       <button class="project-github-link"><a href="https://github.com/Ajit-kumar-khatua/thriving-shock-8502" target="_blank">GitHub</a></button>
-      <button class="project-deployed-link"><a href="https://polleasy231.netlify.app/" target="_blank">Netlify</a></button>
+      <button class="project-deployed-link"><a href="https://slido-frontend-sage.vercel.app/" target="_blank">Netlify</a></button>
     </div>
     <!-- 3 -->
     <div class="project-card">
@@ -254,9 +254,9 @@
       <br>
       <a id="contact-phone" href="#"><i class="fa-solid fa-phone"></i>+91 6371091440</a>
       <br>
-      <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+      <a id="contact-linkedin" href="https://www.linkedin.com/in/ajit-kumar-khatua-4631ab215/"><i class="fa-brands fa-linkedin"></i>Ajit-kumar-khatua</a>
       <br>
-      <a id="contact-github" href="https://github.com/Ajit-kumar-khatua"><i class="fa-brands fa-github"></i>GitHub</a> 
+      <a id="contact-github" href="https://github.com/Ajit-kumar-khatua"><i class="fa-brands fa-github"></i>ajit-kumar-khatua</a> 
     </div>
     <div id="right-child">
       <h2>Message me</h2>
