Project Deployed Link Updated

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <img src="./src/image/Happy buy.png" alt="">
       <h2 class="project-title">Happy Buy</h2>
       <!-- <br> -->
-      <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. <br> It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
+      <p class="project-description">It is an E-commerce website selling all home decor related products, electronics Items etc. It is clone of <a href="https://www.meanbuy.com/" target="_blank">meanbuy.com</a></p>
       <!-- <br> -->
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML, CSS, Javascript</p>
       <!-- <br> -->
