new Project added

--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
       <button class="project-github-link"><a href="https://github.com/Ajit-kumar-khatua/industrious-steam-9257" target="_blank" >GitHub</a></button>      
       <button class="project-deployed-link"><a href="https://babysfashion.netlify.app/" target="_blank">Netlify</a></button>
     </div>
+ <!-- 2 -->
+    <div class="project-card">
+      <img src="./src/image/Rapidfit.png" alt="" >
+      <h2 class="project-title">Rapid Fit</h2>
+      <!-- <br> -->
+      <p class="project-description">It is a web platform where users can book a fitness class with their desired trainers.</p>
+       <!-- <br> -->
+      <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, express, MongoDB</p>
+      <!-- <br>      -->
+      <button class="project-github-link"><a href="https://github.com/Gunjan1116/Fitness-Class-Booking-System" target="_blank" >GitHub</a></button>      
+      <button class="project-deployed-link"><a href="https://chipper-zabaione-4ba9e5.netlify.app/3" target="_blank">Netlify</a></button>
+    </div>
     <!-- 2 -->
     <div class="project-card">
       <img src="./src/image/Home Page.png" alt="">
@@ -222,7 +234,7 @@
   <section class="react-activity-calendar">
     <h1 id="github-status">Github Status</h1>
     <h1 id="github-heading">GitHub Activity-Calendar</h1>
-    <img id="github-contribution" src="./src/image/github stats.png" alt="">
+    <img id="github-contribution" src="./src/image/github contribution.png" alt="">
     <br>
     <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com/?user=ajit-kumar-khatua&theme=vision-friendly-dark"
       alt="streakstat" />
