--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, express, MongoDB</p>
       <!-- <br>      -->
       <button class="project-github-link"><a href="https://github.com/Gunjan1116/Fitness-Class-Booking-System" target="_blank" >GitHub</a></button>      
-      <button class="project-deployed-link"><a href="https://chipper-zabaione-4ba9e5.netlify.app/3" target="_blank">Netlify</a></button>
+      <button class="project-deployed-link"><a href="https://chipper-zabaione-4ba9e5.netlify.app/" target="_blank">Netlify</a></button>
     </div>
     <!-- 2 -->
     <div class="project-card">
