project link updated

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
     <!-- 2 -->
     <div class="project-card">
-      <img src="./src/image/Home Page.png" alt="">
+      <img src="./src/image/Easy Poll.png" alt="">
       <h2 class="project-title">Easy Poll</h2>
       <!-- <br> -->
       <p class="project-description">It is a platform where a user can take responses from other users in real time by creating a poll and it is clone of <a href="https://www.slido.com/" target="_blank">Slido.com</a>. </p>
@@ -199,7 +199,7 @@
       <p class="project-tech-stack"><span>Tech Stack: </span> HTML,CSS, Javascript, Node JS, MongoDB,Web Soket</p>
       <!-- <br> -->
       <button class="project-github-link"><a href="https://github.com/Ajit-kumar-khatua/thriving-shock-8502" target="_blank">GitHub</a></button>
-      <button class="project-deployed-link"><a href="https://slido-frontend-sage.vercel.app/" target="_blank">Netlify</a></button>
+      <button class="project-deployed-link"><a href="https://polleasy123.netlify.app/" target="_blank">Netlify</a></button>
     </div>
     <!-- 3 -->
     <div class="project-card">
